--- a/index.html
+++ b/index.html
@@ -89,6 +89,39 @@
             </div>
         </div>
     </section>
+    <section class="produtcs">
+        <div class="text-case">
+            <h1>produtos</h1>
+            <p>Encontre tudo o que seu amigão precisa em apenas um lugar. A Petland ainda oferece produtos da mais alta qualidade, organizados de acordo com as 4 necessidades básicas do seu animal: comportamento, ambiente, manutenção e nutrição.</p>
+        </div>
+    </section>
+    <section class="produtcs-container">
+        <section class="case-img">
+            <img src="image/petchoice.png" alt="imagem sobre uma novidade">
+        </section>
+        <section class="cd-text">
+            <h2>A escolha do Pet que sabe o que quer!</h2>
+            <p>
+                Prepare-se para muito mais abanadas de rabo e ronronados. Chegou Pet Choice, uma linha completa de produtos da mais alta qualidade, desenvolvida pelos maiores especialistas no assunto. No seu lugar, seu pet com certeza escolheria Pet Choice!
+            </p>
+            <a href="#">saiba mais</a>
+        </section>
+        <section class="cd-icons">
+            <div class="img-dog">
+                <img src="image/dog.jpg" alt="">
+            </div>
+            <div class="icons-social">
+                <span class="face">
+                    <img src="image/2023_Facebook_icon.svg" alt="">
+                    <a href="#"> /petchoiceoficial</a>
+                </span>
+                <span class="instagram">
+                    <img src="image/8dda07a9847930226a1c217e6b3f3cb6.png" alt="">
+                    <a href="#">@petchoiceoficial</a>
+                </span>
+            </div>
+        </section>
+    </section>
 </body>
 <script src="js/carrosel.js"></script>
 </html>
