--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <li><a href="#">blog</a></li>
             <li><a href="#">a petland</a></li>
         </ul>
+        <div class="burguer-menu">
+            <img src="image/194279.png" alt="">
+        </div>
     </nav>
     <header class="container">
         <div class="btn">
@@ -124,4 +127,5 @@
     </section>
 </body>
 <script src="js/carrosel.js"></script>
+<script src="js/menu.js"></script>
 </html>
